fixed deploy issues

--- a/templates/zuriprofilecard.html
+++ b/templates/zuriprofilecard.html
@@ -119,7 +119,7 @@
 				<li><img src="{% static 'img/python.png' %}" class="social-icon"> <span class="display-4"> &middot Python</span></li>
 				<li><img src="{% static 'img/psql.png' %}" class="social-icon"> <span class="display-4"> &middot PostGreSQL</span></li>
 				<li><img src="{% static 'img/django.png' %}" class="social-icon"> <span class="display-4"> &middot Django</span></li>
-				<li><img src="{% static 'img/c#.png' %}" class="social-icon"> <span class="display-4"> &middot C#</span></li>
+				<li><img src="{% static 'img/csharp.png' %}" class="social-icon"> <span class="display-4"> &middot C#</span></li>
 				
 			</ul>
 			<br>
