--- a/templates/zuriprofilecard.html
+++ b/templates/zuriprofilecard.html
@@ -90,7 +90,7 @@
 					<h4 class="text-muted">Zuri NG</h4><span class="text-muted">2020-2021</span>
 				</li>
 				<li class= ''>
-					<h3 class='display-4 text-primary'>Record<br>Analyst</h3>
+					<h3 class='display-4 text-primary'>Data<br>Analyst</h3>
 					<h4 class="text-muted">UnLbl NG</h4><span class="text-muted">2017-<em>Present</em></span>
 				</li>
 				<li class= ''>
